chore(build): separate grails3 test project from general build